--- a/hm/intro-python-exercises2.ipynb
+++ b/hm/intro-python-exercises2.ipynb
@@ -298,17 +298,17 @@
     "%%unittest_main\n",
     "class TestExercise3(unittest.TestCase):\n",
     "    def test_pandas1(self):\n",
-    "        self.assertAlmostEqual(sepalLengthMean, 5.8433333333333337)\n",
+    "        self.assertAlmostEqual(sepal_length_mean, 5.8433333333333337)\n",
     "    def test_pandas2(self):\n",
-    "        self.assertTrue(iristrain.describe().sepalLength['count'] == 75.0)\n",
+    "        self.assertTrue(iristrain.describe().sepal_length['count'] == 75.0)\n",
     "    def test_pandas3(self):\n",
-    "        self.assertTrue(iristest.describe().sepalLength['count'] == 75.0)\n",
+    "        self.assertTrue(iristest.describe().sepal_length['count'] == 75.0)\n",
     "    def test_pandas4(self):\n",
-    "        self.assertAlmostEqual(iristrain.describe().sepalLength['std'], 0.63842994352770832)\n",
+    "        self.assertAlmostEqual(iristrain.describe().sepal_length['std'], 0.63842994352770832)\n",
     "    def test_pandas5(self):\n",
-    "        self.assertAlmostEqual(iristest.describe().sepalLength['std'], 0.67988340282833903)\n",
+    "        self.assertAlmostEqual(iristest.describe().sepal_length['std'], 0.67988340282833903)\n",
     "    def test_pandas6(self):\n",
-    "        self.assertAlmostEqual(sepalLength[134], 6.0999999999999996)\n",
+    "        self.assertAlmostEqual(sepal_length[134], 6.0999999999999996)\n",
     "    def test_forif(self):\n",
     "        self.assertTrue(div7not5 == ['10003', '10017', '10024', '10031', '10038', '10052', '10059', '10066', '10073', '10087', '10094'])\n",
     "    def test_functions(self):\n",
