sepal_length change

--- a/hm/intro-python-exercises2.ipynb
+++ b/hm/intro-python-exercises2.ipynb
@@ -73,7 +73,7 @@
    "metadata": {},
    "source": [
     "# Exercise-Pandas\n",
-    "(1) Using, the Iris dataset, find the mean of the sepalLength and assign it to the `sepal_length_mean` variable using the dataframe returned from the describe command.  \n",
+    "(1) Using, the Iris dataset, find the mean of the sepal_length and assign it to the `sepal_length_mean` variable using the dataframe returned from the describe command.  \n",
     "\n",
     "(2) Create a new dataframe `iristrain` that includes the first 75 rows of the iris dataframe.\n",
     "\n",
