--- a/hm03.ipynb
+++ b/hm03.ipynb
@@ -15,7 +15,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "NAME = \"Jason Kuruzovich\"\n",
@@ -24,49 +26,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# If you have trouble loading your unittests below, \n",
-    "#!conda config --add channels conda-forge"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#!conda install --yes ipython_unittest"
+    "#This loads the grading software.  If you later get a \"failed to import OK.py\" you need to rerun.\n",
+    "from client.api.notebook import Notebook\n",
+    "ok = Notebook('hm03.ok')\n",
+    "_ = ok.auth(inline=True)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### This Loads a Testing Array \n",
-    "- This runs tests against your b array.  If you complete the assingment correctly, you will pass the tests. \n",
-    "- **If you attempt to fake passing the tests you will receive a 0 on the assignment and it will be considered an ethical violation.**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The ipython_unittest extension is already loaded. To reload it, use:\n",
-      "  %reload_ext ipython_unittest\n"
-     ]
-    }
-   ],
-   "source": [
-    "%load_ext ipython_unittest\n",
-    "#This runs tests against your b array.  If you complete the assingment correctly, you will pass the tests. "
+    " \n",
+    "**If you attempt to fake passing the tests you will receive a 0 on the assignment and it will be considered an ethical violation.**"
    ]
   },
   {
@@ -75,18 +50,44 @@
    "source": [
     "## Exercises - For and If.\n",
     "\n",
-    "(1). Write a program which create a list called `fivetoten` of all numbers from 5 to 10 (inclusive).\n",
-    "\n",
-    "\n"
+    "(1). Write a for loop which create a list called `fivetoten` of all numbers from 5 to 10 (inclusive).\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Answer question 1 here. "
+    "#<insert q1 code here>\n",
+    "fivetoten=[5,6,7,8,9,10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    \n",
+       "    \n",
+       "        <p>All 1 tests passed! Full grade.</p>\n",
+       "    \n",
+       "    "
+      ],
+      "text/plain": [
+       "<gradememaybe.ok.OKTestsResult at 0x109cfc278>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "_ = ok.grade('q01')"
    ]
   },
   {
@@ -100,7 +101,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Answer question 2 here."
@@ -116,7 +119,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Answer question 3 here."
@@ -134,7 +139,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Define your function here. "
@@ -208,7 +215,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np \n",
@@ -234,7 +243,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Answer"
@@ -244,15 +255,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(7) Create variables `AccEveryoneDies` and `AccGender` using a calculation of accuracy of predictions for the `training` dataset.  "
+    "(7) Create variables AccEveryoneDies and AccGender.  AccEveryoneDies should be the accuracy of the EveryoneDies model in the Train dataset. Similarly, AccGender is the a accuracy of the Gender (women survive) model in the Train dataset. \n",
+    "\n",
+    "\n",
+    "How might you do this using the tools that you have?  (a) create a new column where for the Training set Survived==PredEveryoneDies it equals 1 if true and 0 if false. Sum the number of 1s and divide by the total number of records in the training set.  "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "#Answer"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -271,9 +289,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "def generate_submission(df, col, file ):\n",
+    "    submission = df.loc[:,['PassengerId', col]]\n",
+    "    submission.rename(columns={col: 'Survived'}, inplace=True)\n",
+    "    submission.to_csv(file, index=False)\n",
+    "    return submission\n",
+    "\n",
+    "submitdie = generate_submission(test, 'PredEveryoneDies', 'submiteveryonedies.csv')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -295,7 +323,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -313,7 +343,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# answer"
@@ -331,7 +363,9 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Answer "
@@ -340,7 +374,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%%unittest_main\n",
@@ -382,7 +418,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#This is a collection of all of the tests from the exercises above. "
@@ -391,7 +429,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -414,7 +454,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
