Fix install and markdown.

--- a/hm03.ipynb
+++ b/hm03.ipynb
@@ -196,7 +196,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "import pandas as pd\n",
     "example_data = [{'predicted': 1, 'actual': 1},\n",
     "         {'predicted': 1,  'actual': 0},\n",
     "         {'predicted': 0,  'actual': 1},\n",
@@ -240,10 +240,10 @@
     "The syntax for including a markdown picture is shown below. \n",
     "\n",
     "```\n",
-    "![]myscreenshot.png\n",
+    "![](myscreenshot.png)\n",
     "```\n",
     "\n",
-    "You will have to change the cell type to a markdown cell below.  \n",
+    "You will have to change the cell type to a markdown cell below.  You can see more [here](https://www.youtube.com/watch?v=xlD8FIM5biA).\n",
     "\n",
     "\n"
    ]
@@ -261,13 +261,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "#Change this to a markdown cell and insert your picture of you\n",
-    "#Kaggle upload here. \n"
+    "#Kaggle upload here. \n",
+    "\n",
+    "\n",
+    "![](myscreenshot.png)\n",
+    "\n"
    ]
   },
   {
@@ -333,7 +335,7 @@
     "(12). Create a prediction file for the \"women and children first\" model in using the test dataset and upload it to Kaggle. Go through the process of uploading it to Kaggle. Put that screenshot in this repository of what happens. Sometimes Kaggle won't give you a score if the exact same file has been submitted by someone else.  Don't worry about that.  The syntax for including a markdown picture is shown below.  \n",
     "\n",
     "```\n",
-    "![]myscreenshot.png\n",
+    "![](myscreenshot.png)\n",
     "```\n",
     "\n",
     "You will have to change the cell type to a markdown cell below.  "
@@ -384,7 +386,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!conda install --yes ipython_unittest"
+    "!conda install -c conda-forge --yes ipython_unittest "
    ]
   },
   {
